--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,8 +3,8 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: "Hack";
-    font-size: 15px;
+    font-family: Roboto, Cantarell;
+    font-size: 20px;
     min-height: 0;
 }
 
