--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,7 +3,7 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: Roboto, Cantarell;
+    font-family: Iosevka Term, Roboto, Cantarell;
     font-size: 20px;
     min-height: 0;
 }
