--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -3,8 +3,8 @@
 * {
     border: none;
     border-radius: 0;
-    font-family: Iosevka Term, Roboto, Cantarell;
-    font-size: 20px;
+    font-family: Liberation Sans Narrow;
+    font-size: 17px;
     min-height: 0;
 }
 
@@ -18,7 +18,7 @@ window#waybar{
 }
 
 #workspaces button {
-    padding: 0 15px;
+    /* padding: 0 15px; */
     background: transparent;
     /*font-weight: bold;*/
     color: @foreground;
@@ -27,6 +27,10 @@ window#waybar{
 #workspaces button.focused {
     color: @foreground;
     background: @purple;
+}
+
+#workspaces button.current_output {
+    font-style: italic;
 }
 
 #mode {
@@ -76,7 +80,7 @@ window#waybar{
 }
 
 #tray {
-    font-family: Cantarell;
+    font-family: Cantarell, Roboto, Sans;
 }
 
 #idle_inhibitor.activated {
