--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -22,6 +22,7 @@ window#waybar{
     background: transparent;
     /*font-weight: bold;*/
     color: @foreground;
+    font-style: italic;
 }
 
 #workspaces button.focused {
@@ -30,7 +31,7 @@ window#waybar{
 }
 
 #workspaces button.current_output {
-    font-style: italic;
+    font-style: normal;
 }
 
 #mode {
